--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "license": "GPL-3.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
+  },
+  "dependencies": {
+    "express": "4.18.1"
+  },
   "devDependencies": {
+    "@types/express": "4.17.13",
+    "@types/node": "17.0.36",
     "typescript": "4.7.2"
   }
 }
