--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "dev": "tsnd --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
     "start": "node ./dist/index.js"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/node": "17.0.36",
+    "ts-node-dev": "2.0.0",
     "typescript": "4.7.2"
   }
 }
