--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "0.0.1",
   "private": true,
   "license": "GPL-3.0",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev": "tsnd --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored --no-comments --source-maps inline",
+    "dev": "tsnd --respawn --transpile-only --ignore-watch node_modules --no-notify -r tsconfig-paths/register src/index.ts",
     "start": "node ./dist/index.js"
   },
   "dependencies": {
     "express": "4.18.1"
   },
   "devDependencies": {
+    "@babel/cli": "7.17.10",
+    "@babel/core": "7.18.2",
+    "@babel/node": "7.17.10",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-typescript": "7.17.12",
     "@types/express": "4.17.13",
     "@types/node": "17.0.36",
+    "babel-plugin-module-resolver": "4.1.0",
     "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "4.0.0",
     "typescript": "4.7.2"
   }
 }
