--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,41 @@
     "rootDir": "./src", /* Specify the root folder within your source files. */
     "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {}, /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "paths": {
+      "@config/*": [
+        "./src/configs/*"
+      ],
+      "@interface/*": [
+        "./src/database/interfaces/*"
+      ],
+      "@model/*": [
+        "./src/database/models/*"
+      ],
+      "@repository/*": [
+        "./src/database/repositories/*"
+      ],
+      "@schema/*": [
+        "./src/database/schemas/*"
+      ],
+      "@middleware/*": [
+        "./src/middlewares/*"
+      ],
+      "@provider/*": [
+        "./src/providers/*"
+      ],
+      "@route/*": [
+        "./src/routes/*"
+      ],
+      "@service/*": [
+        "./src/services/*"
+      ],
+      "@case/*": [
+        "./src/usecases/*"
+      ],
+      "@util/*": [
+        "./src/utils/*"
+      ],
+    }, /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     "types": ["node"], /* Specify type package names to be included without being referenced in a source file. */
