--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,7 +65,7 @@
       ],
     }, /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
+    "typeRoots": ["src/@types"],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     "types": ["node"], /* Specify type package names to be included without being referenced in a source file. */
     "allowUmdGlobalAccess": true, /* Allow accessing UMD globals from modules. */
     "resolveJsonModule": true, /* Enable importing .json files */
